--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Encyclopedias and dictionaries'
 - !lcc 'AE'
+- GITenberg
 title: "Encyclopaedia Britannica, 11th Edition, \"Electrostatics\" to \"Engis\"\r\n\
   Volume 9, Slice 3"
 url: http://www.gutenberg.org/ebooks/35169
